--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -1,9 +1,7 @@
 .card {
-  width: 120px;
-  height: 150px;
-}
-  
-.defaultCard {
   width: 160px;
   height: 190px;
+  border: 5px solid #643494;
+  border-radius: 8px;
+  padding: 4px 8px;
 }
